--- a/studio39/package.json
+++ b/studio39/package.json
@@ -7,11 +7,13 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "svelte": "^5.43.4",
         "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
+        "vite": "^7.2.2"
     }
 }
