--- a/studio39/docker-compose.yml
+++ b/studio39/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     app:
         build: .
         ports:
-            - '8000:8000'
+            - '${APP_PORT:-80}:80'
+            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         volumes:
             - '.:/var/www/html'
         command: 'php artisan serve --host=0.0.0.0 --port=8000'
