--- a/studio39/package.json
+++ b/studio39/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite --host 0.0.0.0 --port 5173"
     },
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
